<resources>
    <string name="app_name">Пятиминутка: Тренажёр по физике</string>
    <string name="app_name_small">Пятиминутка</string>
    <string name="settings_text">Настройки</string>
    <string name="ArrowLeft"><![CDATA[<]]></string>
    <string name="support_text_reduce">Уменьшить размер текста</string>
    <string name="support_text_enlarge">Увеличить размер текста</string>
    <string name="tab_text_1">1 вопрос</string>
    <string name="tab_text_2">2 вопрос</string>
    <string name="tab_text_3">3 вопрос</string>
    <string name="tab_text_4">4 вопрос</string>
    <string name="tab_text_5">5 вопрос</string>
    <string name="tab_text_6">6 вопрос</string>
    <string name="tab_text_7">7 вопрос</string>
    <string name="tab_text_8">8 вопрос</string>
    <string name="tab_text_9">9 вопрос</string>
    <string name="tab_text_10">10 вопрос</string>
    <string name="tab_text_11">11 вопрос</string>
    <string name="tab_text_12">12 вопрос</string>
    <string name="tab_text_13">13 вопрос</string>
    <string name="tab_text_14">14 вопрос</string>
    <string name="tab_text_15">15 вопрос</string>
    <string name="tab_text_16">16 вопрос</string>
    <string name="tab_text_17">17 вопрос</string>
    <string name="tab_text_18">18 вопрос</string>
    <string name="tab_text_19">19 вопрос</string>
    <string name="end_test">Завершить тест</string>
    <string name="text_settings">Настройки</string>
    <string name="text_result">Результаты</string>
    <string name="text_test">Тест</string>
    <string name="test_title1">§15 Электродинамика</string>
    <string name="text_difficult">Сложность</string>
    <string name="text_difficult_easy">Лёгкая</string>
    <string name="text_difficult_medium">Средняя</string>
    <string name="text_difficult_hard">Высокая</string>
    <string name="text_score">Рекорд</string>
    <string name="text_last_score">Предыдущий рез.</string>
    <string name="text_start_quiz">Приступить к выполнению</string>
    <string name="text_achievements">Достижения</string>
    <string name="text_top_players">Топ игроков</string>
    <string name="test1_easy_q1">Выберите верное - газовый закон (что постоянно)</string>
    <string name="test1_easy_q2">Первый закон термодинамики</string>
    <string name="test1_easy_q3">Формула для расчёта количества теплоты, выделяемого при крисиаллизации</string>
    <string name="test1_easy_q4">Систему, которая не обменивается с внешней средой ни энергией,
        ни веществом называют</string>
    <string name="test1_easy_q5">Характеристики процесса изменения внутренней энергии - это</string>
    <string name="test1_easy_q6">Второй закон термодинамики</string>
    <string name="test1_easy_q7">Какой процесс произошел в идеальном газе, если изменение его
        внутренней энергии равно нулю?</string>
    <string name="test1_easy_q8">В каком тепловом процессе не совершается работа?</string>
    <string name="test1_easy_q9">При передаче газу количества теплоты 23 кДж он совершил работу в 55 кДж.
        Чему равно изменение внутренней энергии газа?</string>
    <string name="test1_easy_q10">При изотермическом процессе газу передано 9 кДж теплоты.
        Чему равна работа, совершённая газом?</string>
    <string name="test1_medium_q1">Внутренняя энергия данной массы реального газа…</string>
    <string name="test1_medium_q2">Взято по одному молю гелия, неона и аргона при одинаковой температуре.
        У какого газа внутренняя энергия самая большая:</string>
    <string name="test1_medium_q3">В процессе плавления твердого тела подводимое тепло идет
        на разрыв межатомных (межмолекулярных) связей и разрушение дальнего порядка в кристаллах.
        При  плавлении…</string>
    <string name="test1_medium_q4">Какой тепловой процесс изменения состояния
        газа происходит без теплообмена?</string>
    <string name="test1_medium_q5">Идеальный газ переводится из одного состояния в другое двумя способами:
        а—б и а—в (см. рис.). Какому состоянию соответствует наибольшая температура?</string>
    <string name="test1_medium_q6">На сколько мегаджоулей отличается внутренняя энергия 2 кг водяного пара
        при температуре 100°С от внутренней энергии 2 кг воды при этой же температуре? L=2,3МДж/кг</string>
    <string name="test1_medium_q7">Чему равна работа, совершенная газом при переходе его из состояния
        I в состояние II (см. рис.)?</string>
    <string name="test1_medium_q8">В процессе адиабатного расширения газ совершает работу, равную
        3 • 1010 Дж. Чему равно изменение внутренней энергии газа?</string>
    <string name="test1_medium_q9">Какую работу совершил водород массой 2 кг при изобарном нагревании на 10 К?</string>
    <string name="test1_medium_q10">Тепловая   машина   получила   от   нагревателя 0,4 МДж теплоты
        и отдала холодильнику 0,1 МДж теплоты. Чему равен КПД такой тепловой машины?</string>
    <string name="test1_hard_q1">В стакан с водой опустили кристаллы марганцовки.
        Через некоторое время получился равномерно окрашенный раствор.
        Могут ли из раствора самопроизвольно образоваться кристаллики марганцовки?</string>
    <string name="test1_hard_q2">Температура тела А 300 К, температура тела Б 100 0С,
        Температура какого из тел повысится при тепловом контакте?</string>
    <string name="test1_hard_q3">Внутренняя энергия идеального газа при адиабатном процессе,
        график которого представлен на рис.</string>
    <string name="test1_hard_q4">На рис. показан процесс изменения состояния идеального газа.
        Чему равна работа, совершенная газом, если в этом процессе он получил 6 • 105 Дж теплоты?</string>
    <string name="test1_hard_q5">В процессе изохорного нагревания газ получил 15 МДж теплоты.
        Чему равно изменение внутренней энергии газа?</string>
    <string name="test1_hard_q6">Водород и гелий равной массы, взятые при одинаковых давлениях, нагревают на 20К.
        Одинаковая ли работа совершается при этом?</string>
    <string name="test1_hard_q7">Идеальный газ переводится из одного состояния в другое тремя способами:
        а—б, а—в и аг (см. рис.). Каким состояниям соответствует одинаковая температура?</string>
    <string name="test1_hard_q8">Какое значение КПД может иметь идеальная тепловая машина с
        температурой нагревателя 527 °С и температурой холодильника -27 °С?</string>
    <string name="test1_hard_q9">Идеальный газ переводится из первого состояния во второе двумя способами: 1—а—2 и 1—б—2.
        В каком случае газу передано большее количество теплоты? </string>
    <string name="test1_hard_q10">На рис. приведен график зависимости внутренней энергии некоторой массы
        одноатомного идеального газа от температуры U = U (Т).
        Используя график, рассчитайте количество молей в данном газе.</string>
    <string name="test1_easy_q1_ch1">Изотермический (температура), изобарический (объем),
        изохорический (давление)</string>
    <string name="test1_easy_q1_ch2">Изотермический (давление), изобарический (объем),
        изохорический (температура)</string>
    <string name="test1_easy_q1_ch3">Изотермический (температура), изобарический (давление),
        изохорический (объем)</string>
    <string name="test1_easy_q1_ch4">000</string>
    <string name="test1_easy_q2_ch1">∆U = A вн+ Q</string>
    <string name="test1_easy_q2_ch2">∆U = A + Q</string>
    <string name="test1_easy_q2_ch3">∆U = A - Q</string>
    <string name="test1_easy_q2_ch4">000</string>
    <string name="test1_easy_q3_ch1">Q = Lm</string>
    <string name="test1_easy_q3_ch2">Q = qm</string>
    <string name="test1_easy_q3_ch3">Q = λ m</string>
    <string name="test1_easy_q3_ch4">000</string>
    <string name="test1_easy_q4_ch1">Внешней</string>
    <string name="test1_easy_q4_ch2">Изолированной</string>
    <string name="test1_easy_q4_ch3">замкнутой</string>
    <string name="test1_easy_q4_ch4">000</string>
    <string name="test1_easy_q5_ch1">Работа</string>
    <string name="test1_easy_q5_ch2">Работа и количество теплоты</string>
    <string name="test1_easy_q5_ch3">Количество теплоты</string>
    <string name="test1_easy_q5_ch4">000</string>
    <string name="test1_easy_q6_ch1">Невозможно перевести тепло от более холодной системы к более
        горячей при отсутствии других одновременных изменений в обеих системах или в окружающих телах</string>
    <string name="test1_easy_q6_ch2">Энергия в природе не возникает из ничего и не исчезает:
        она только переходит из одной формы в другую</string>
    <string name="test1_easy_q6_ch3">Изменение внутренней энергии системы при переходе её из одного
        состояния в другое равно сумме работы внешних сил и количества теплоты, переданного системе</string>
    <string name="test1_easy_q6_ch4">000</string>
    <string name="test1_easy_q7_ch1">Изобарный</string>
    <string name="test1_easy_q7_ch2">Изотермический</string>
    <string name="test1_easy_q7_ch3">Адиабатный</string>
    <string name="test1_easy_q7_ch4">000</string>
    <string name="test1_easy_q8_ch1">В изобарном</string>
    <string name="test1_easy_q8_ch2">В изохорном</string>
    <string name="test1_easy_q8_ch3">В изотермическом</string>
    <string name="test1_easy_q8_ch4">000</string>
    <string name="test1_easy_q9_ch1">32000 Дж</string>
    <string name="test1_easy_q9_ch2">- 32000 Дж</string>
    <string name="test1_easy_q9_ch3">78000 Дж </string>
    <string name="test1_easy_q9_ch4">000</string>
    <string name="test1_easy_q10_ch1">0 Дж</string>
    <string name="test1_easy_q10_ch2">- 9000 Дж</string>
    <string name="test1_easy_q10_ch3">9000 Дж</string>
    <string name="test1_easy_q10_ch4">000</string>
    <string name="test1_medium_q1_ch1">Не зависит ни от температуры, ни от объема.</string>
    <string name="test1_medium_q1_ch2">Не зависит ни от каких факторов.</string>
    <string name="test1_medium_q1_ch3">Зависит только от объема.</string>
    <string name="test1_medium_q1_ch4">Зависит от температуры и объема.</string>
    <string name="test1_medium_q2_ch1">у всех газов одинакова</string>
    <string name="test1_medium_q2_ch2">гелия</string>
    <string name="test1_medium_q2_ch3">неона</string>
    <string name="test1_medium_q2_ch4">аргона</string>
    <string name="test1_medium_q3_ch1">Внутренняя энергия тела не изменяется.</string>
    <string name="test1_medium_q3_ch2">Внутренняя энергия тела увеличивается.</string>
    <string name="test1_medium_q3_ch3">Внутренняя энергия тела уменьшается.</string>
    <string name="test1_medium_q3_ch4">Внутренняя  энергия  тела  иногда  увеличивается,
        иногда уменьшается.</string>
    <string name="test1_medium_q4_ch1">Изобарный.</string>
    <string name="test1_medium_q4_ch2">Изохорный.</string>
    <string name="test1_medium_q4_ch3">Изотермический.</string>
    <string name="test1_medium_q4_ch4">Адиабатный.</string>
    <string name="test1_medium_q5_ch1">а</string>
    <string name="test1_medium_q5_ch2">б</string>
    <string name="test1_medium_q5_ch3">в</string>
    <string name="test1_medium_q5_ch4">а и в</string>
    <string name="test1_medium_q6_ch1">на 4,6 МДж больше </string>
    <string name="test1_medium_q6_ch2">на 2,3 МДж меньше</string>
    <string name="test1_medium_q6_ch3">на 2,3 МДж больше</string>
    <string name="test1_medium_q6_ch4">не отличается</string>
    <string name="text_books">Книги</string>
    <string name="text_tests">Тесты</string>
    <string name="text_profile">Профиль</string>
    <string name="text_notifications">Уведомления</string>
    <string name="text_right_answer">— Верный ответ</string>
    <string name="text_selected_answer">— Выбранный ответ</string>
    <string name="text_question_skipped">Задание пропущено</string>
    <string name="text_parsing">разбор</string>
    <string name="text_small_skip">задание пропущено</string>
    <string name="text_rank">Ранг</string>
    <string name="text_name">Имя</string>
    <string name="text_points">Очки</string>
    <string name="text_change_account">Сменить аккаунт</string>
</resources>