<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_book_list"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/text_books"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/navigation_test_list"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:title="@string/text_tests"
        app:showAsAction="withText" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/text_profile"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_notifications_48"
        android:title="@string/text_notifications"
        app:showAsAction="withText"/>



</menu>