<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopRateActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar111"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/shadow"
        android:background="?attr/colorBackgroundBlocks" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/textView5"
                style="@style/PrimaryText"
                android:layout_marginStart="16dp"
                android:gravity="start"
                android:text="@string/text_rank"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/PrimaryText"
                android:gravity="center"
                android:text="@string/text_name"
                app:layout_constraintEnd_toStartOf="@+id/textView6"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                style="@style/PrimaryText"
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/text_points"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/top_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>