<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="?attr/colorAccent"
        android:clickable="true"
        android:elevation="@dimen/shadow_two"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        android:visibility="gone">

        <TextView
            style="@style/PrimaryText"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:layout_gravity="center"
            android:text="@string/text_change_account"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccentSecondary"
        android:elevation="@dimen/shadow_two"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:visibility="gone"
            android:id="@+id/image_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_baseline_add_16" />

<!--        <LinearLayout-->
<!--            android:visibility="invisible"-->
<!--            android:id="@+id/image_add_btn"-->
<!--            android:layout_width="128dp"-->
<!--            android:layout_height="128dp"-->
<!--            android:background="@drawable/badge_circle_green"-->
<!--            android:backgroundTint="?attr/colorAccent"-->
<!--            android:padding="16dp">-->

<!--            -->


<!--        </LinearLayout>-->

        <TextView
            android:id="@+id/text_your_name"
            style="@style/PrimaryText"
            android:layout_marginTop="8dp"
            android:text=""
            android:drawablePadding="4dp"/>

        <TextView
            style="@style/SecondaryText"
            android:text="Ученик"
            android:visibility="invisible"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_achievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="?attr/colorBackgroundBlocks"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <com.mikhaellopez.circularprogressbar.CircularProgressBar
                    android:id="@+id/circularProgressBar"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="8dp"
                    app:cpb_background_progressbar_color="@color/silver"
                    app:cpb_background_progressbar_width="8dp"
                    app:cpb_progress="0"
                    app:cpb_progressbar_color="?attr/colorAccent"
                    app:cpb_progressbar_width="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_percent_achievements"
                    style="@style/PrimaryText"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
                    app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
                    app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
                    app:layout_constraintTop_toTopOf="@+id/circularProgressBar" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/PrimaryText"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_achievements"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/circularProgressBar" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="?attr/colorBackgroundBlocks"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:src="@drawable/ic_up_statistics"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/colorAccent" />

                <TextView
                    style="@style/PrimaryText"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_top_players"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>